[ADD] - Add direct chat communication on event page

--- a/src/app/event/event-single-page/event-single-page.component.css
+++ b/src/app/event/event-single-page/event-single-page.component.css
@@ -74,7 +74,18 @@
   font-weight: normal;
 }
 
+
 #exportBtn:hover{
+  background-color: var(--secondary-color);
+}
+
+#chatBtn{
+  background-color: var(--primary-color);
+  color: white;
+  font-weight: normal;
+}
+
+#chatBtn:hover{
   background-color: var(--secondary-color);
 }
 
