[ADD] - Fix pictures

--- a/src/app/chat/single-chat/single-chat.component.html
+++ b/src/app/chat/single-chat/single-chat.component.html
@@ -1,7 +1,7 @@
 <div class="chat-container">
   <!-- Chat Info Header -->
   <div class="chat-header">
-    <img [src]="environment.apiImagesHost + chatPreview.profilePictureUrl" alt="Profile Picture" class="profile-picture" />
+    <img [src]="chatPreview.profilePictureUrl ? environment.apiImagesHost + chatPreview.profilePictureUrl : 'profile.png'" alt="Profile Picture" class="profile-picture" />
     <div class="chat-details">
       <span class="username">{{ chatPreview.username }}</span>
       <span class="name">{{ chatPreview.name }} {{ chatPreview.surname }}</span>
