--- a/src/app/admin-dashboard/dashboard/dashboard.component.html
+++ b/src/app/admin-dashboard/dashboard/dashboard.component.html
@@ -8,4 +8,7 @@
   <mat-tab label="Event types">
     <app-admin-event-types-management></app-admin-event-types-management>
   </mat-tab>
+  <mat-tab label="Comments">
+    <app-admin-comments-management></app-admin-comments-management>
+  </mat-tab>
 </mat-tab-group>
