[ADD] - Add error message from server toast

--- a/src/app/solutions/create-service/create-service.component.html
+++ b/src/app/solutions/create-service/create-service.component.html
@@ -11,7 +11,7 @@
 
         <mat-form-field appearance="fill">
           <mat-label>Description</mat-label>
-          <textarea matInput placeholder="Enter description" name="description" formControlName="description"></textarea>
+          <textarea matInput placeholder="Enter description" name="description" formControlName="description" maxlength="1000"></textarea>
         </mat-form-field>
 
         <mat-form-field appearance="fill">
