--- a/src/app/view-my-events/create-event/create-event.component.html
+++ b/src/app/view-my-events/create-event/create-event.component.html
@@ -228,7 +228,7 @@
 
     <!-- Navigation Buttons -->
     <div class="button-group">
-      <button mat-raised-button class="back-button" *ngIf="currentStep == 0" type="button" [routerLink]="'/create-event'">
+      <button mat-raised-button class="back-button" *ngIf="currentStep == 0" type="button" [routerLink]="'/my-events'">
         BACK
       </button>
 
