--- a/src/app/solutions/pupservice-management/pupservice-management.component.html
+++ b/src/app/solutions/pupservice-management/pupservice-management.component.html
@@ -90,7 +90,9 @@
       <!-- Service Name Column -->
       <ng-container matColumnDef="product">
         <th mat-header-cell *matHeaderCellDef mat-sort-header="name"> Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        <td mat-cell *matCellDef="let element">
+          {{element.name}}
+        </td>
       </ng-container>
 
       <!-- Description Column -->
@@ -169,6 +171,11 @@
             <mat-icon>delete</mat-icon>
           </button>
             <mat-icon *ngIf="element.status === 'PENDING'" [ngStyle]="{color: 'var(--primary-color)'}">sync</mat-icon>
+          <button mat-icon-button (click)="goToSolution(element)" [ngStyle]="{color: 'var(--primary-color)'}" *ngIf="element.status === 'APPROVED' && element.visible == true">
+            <mat-icon>
+              open_in_new
+            </mat-icon>
+          </button>
         </td>
       </ng-container>
 
