--- a/src/app/admin-dashboard/comments/admin-comments-management/admin-comments-management.component.html
+++ b/src/app/admin-dashboard/comments/admin-comments-management/admin-comments-management.component.html
@@ -19,7 +19,7 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef class="actions-header"> Actions </th>
         <td mat-cell *matCellDef="let element" class="actions-cell">
-          <button mat-icon-button (click)="delete(element)" [ngStyle]="{color: 'var(--red-color)'}">
+          <button mat-icon-button (click)="delete(element)" [ngStyle]="{color: 'var(--error-color)'}">
             <mat-icon>delete</mat-icon>
           </button>
           <button mat-icon-button (click)="approve(element)" [ngStyle]="{color: 'var(--green-color)'}">
