--- a/src/app/profile/profile-page/profile.component.html
+++ b/src/app/profile/profile-page/profile.component.html
@@ -123,15 +123,15 @@
 </div>
 <mat-tab-group selectedIndex="0">
   <mat-tab label="My Calendar">
-    <app-profile-calendar [attendingEvents]="user.attendingEvents"
+    <app-profile-calendar *ngIf="user.attendingEvents && user.attendingEvents.length > 0" [attendingEvents]="user.attendingEvents"
                           [myEvents]="user.myEvents"></app-profile-calendar>
   </mat-tab>
-
   <mat-tab label="Favorite Events">
-    <app-favorite-events [favoriteEvents]="user.favoriteEvents"></app-favorite-events>
+    <app-favorite-events [favoriteEvents]="this.user.favoriteEvents"></app-favorite-events>
   </mat-tab>
 
+
   <mat-tab label="Favorite Products/Services">
-    <app-favorite-solutions [favoriteSolutions] = "user.favoriteSolutions"></app-favorite-solutions>
+    <app-favorite-solutions [favoriteSolutions] = "this.user.favoriteSolutions"></app-favorite-solutions>
   </mat-tab>
 </mat-tab-group>
