--- a/src/app/chat/single-chat/single-chat.component.css
+++ b/src/app/chat/single-chat/single-chat.component.css
@@ -23,6 +23,10 @@
   margin-right: 1em;
 }
 
+.profile-picture:hover{
+  cursor: pointer;
+}
+
 .chat-details {
   display: flex;
   flex-direction: column;
