[ADD] - add reports on admin dashboard

--- a/src/app/admin-dashboard/dashboard/dashboard.component.html
+++ b/src/app/admin-dashboard/dashboard/dashboard.component.html
@@ -11,4 +11,7 @@
   <mat-tab label="Comments">
     <app-admin-comments-management></app-admin-comments-management>
   </mat-tab>
+  <mat-tab label="Reports">
+    <app-admin-reports-management></app-admin-reports-management>
+  </mat-tab>
 </mat-tab-group>
