[FIX] - full reporting cycle worksgit add .!

--- a/src/app/chat/single-chat/single-chat.component.html
+++ b/src/app/chat/single-chat/single-chat.component.html
@@ -38,4 +38,4 @@
   </div>
 </div>
 
-<app-block-report-dialog *ngIf="showBlockReportPanel"></app-block-report-dialog>
+<app-block-report-dialog [recipient]="chatPreview.username" *ngIf="showBlockReportPanel"></app-block-report-dialog>
