--- a/src/app/blocking/block-user/block-user.component.html
+++ b/src/app/blocking/block-user/block-user.component.html
@@ -1,7 +1,6 @@
 <div class="component">
-  <h2>Are you sure you want to block user?</h2>
-
-  <h2> You wont be able to communicate with this user and </h2>
+  <p class="header">Are you sure you want to block {{data.recipient}}? </p>
+    <p>You wont be able to communicate with this user </p>
 
   <mat-dialog-actions class="actions-container">
     <button mat-raised-button mat-dialog-close class="cancel-button">CANCEL</button>
