--- a/src/app/solutions/solution-page/solution-page.component.css
+++ b/src/app/solutions/solution-page/solution-page.component.css
@@ -83,6 +83,17 @@
   width: 100%;
 }
 
+.buy-btn {
+  font-weight: normal;
+  background-color: var(--secondary-color) !important;
+  color: white !important;
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease;
+  display: flex;
+  width: 100%;
+  margin-top: 0.75em;
+}
+
 .reviews {
   margin-top: 20px;
   padding: 20px;
