[FIX] - Sync button icons

--- a/src/app/solutions/solution-page/solution-page.component.html
+++ b/src/app/solutions/solution-page/solution-page.component.html
@@ -63,7 +63,7 @@
           You need more info? Chat with us!
         </button>
         <button mat-raised-button class="buy-btn" (click)="selectEventForPurchase()" *ngIf="solution.applicableEvents != null && solution.applicableEvents.length">
-          <mat-icon>shopping</mat-icon>
+          <mat-icon>shopping_bag</mat-icon>
           Buy now!
         </button>
       </div>
