--- a/src/app/reservation/booking-a-service/booking-a-service.component.css
+++ b/src/app/reservation/booking-a-service/booking-a-service.component.css
@@ -14,6 +14,8 @@ form {
   justify-content: center;
   align-items: center;
   gap: 2rem;
+  margin-right: 2rem;
+  margin-left: 2rem;
 }
 
 /* Individualni form-field */
@@ -53,7 +55,7 @@ mat-form-field {
 }
 
 
-.event-date {
-  background-color: rgba(255, 193, 7, 0.5) !important; /* Žuta nijansa */
+::ng-deep .event-date {
+  background-color: var(--primary-color) !important;
   border-radius: 50%;
 }
