--- a/src/app/profile/profile-page/profile.component.html
+++ b/src/app/profile/profile-page/profile.component.html
@@ -123,7 +123,7 @@
 </div>
 <mat-tab-group selectedIndex="0">
   <mat-tab label="My Calendar">
-    <app-profile-calendar *ngIf="user.attendingEvents && user.attendingEvents.length > 0" [attendingEvents]="user.attendingEvents"
+    <app-profile-calendar *ngIf="user.attendingEvents != undefined" [attendingEvents]="user.attendingEvents"
                           [myEvents]="user.myEvents"></app-profile-calendar>
   </mat-tab>
   <mat-tab label="Favorite Events">
