ADD - Initialize product management

--- a/src/app/solutions/pupservice-product-management/pupservice-product-management.component.html
+++ b/src/app/solutions/pupservice-product-management/pupservice-product-management.component.html
@@ -1,5 +1,8 @@
 <mat-tab-group selectedIndex="0">
   <mat-tab label="Products">
+    <app-pup-product-management
+      #services
+    ></app-pup-product-management>
   </mat-tab>
   <mat-tab label="Services" >
     <app-pupservice-management
