--- a/src/app/solutions/edit-service/edit-service.component.html
+++ b/src/app/solutions/edit-service/edit-service.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Create New Service</h2>
+<h2 mat-dialog-title>Edit Service</h2>
 <mat-dialog-content>
   <form [formGroup]="editServiceForm">
     <div class="dialog-container">
