[FIX] - Fetch only the products belonging to the logged in pup

--- a/src/app/solutions/pupservice-product-management/pupservice-product-management.component.html
+++ b/src/app/solutions/pupservice-product-management/pupservice-product-management.component.html
@@ -2,6 +2,7 @@
   <mat-tab label="Products">
     <app-pup-product-management
       #services
+      (productChanged)="refreshPrices()"
     ></app-pup-product-management>
   </mat-tab>
   <mat-tab label="Services" >
