--- a/src/app/solutions/pup-product-management/pup-product-management.component.html
+++ b/src/app/solutions/pup-product-management/pup-product-management.component.html
@@ -166,19 +166,41 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef> Actions </th>
         <td mat-cell *matCellDef="let element">
-          <button mat-icon-button (click)="edit(element)" [ngStyle]="{color: 'var(--primary-color)'}">
+          <button
+            mat-icon-button
+            (click)="edit(element)"
+            [disabled]="element.status === 'PENDING'"
+            [ngStyle]="{
+      color: element.status === 'PENDING' ? 'gray' : 'var(--primary-color)'
+    }">
             <mat-icon>edit</mat-icon>
           </button>
-          <button mat-icon-button (click)="remove(element.id)" [ngStyle]="{color: 'var(--error-color)'}">
+
+          <button
+            mat-icon-button
+            (click)="remove(element.id)"
+            [disabled]="element.status === 'PENDING'"
+            [ngStyle]="{
+      color: element.status === 'PENDING' ? 'gray' : 'var(--error-color)'
+    }">
             <mat-icon>delete</mat-icon>
           </button>
-          <mat-icon *ngIf="element.status === 'PENDING'" [ngStyle]="{color: 'var(--primary-color)'}">sync</mat-icon>
-          <button mat-icon-button (click)="goToProduct(element)" [ngStyle]="{color: 'var(--primary-color)'}" *ngIf="element.status === 'APPROVED' && element.visible == true">
-            <mat-icon>
-              open_in_new
-            </mat-icon>
+
+          <mat-icon
+            *ngIf="element.status === 'PENDING'"
+            [ngStyle]="{ color: 'var(--primary-color)' }">
+            sync
+          </mat-icon>
+
+          <button
+            mat-icon-button
+            (click)="goToProduct(element)"
+            *ngIf="element.status === 'APPROVED' && element.visible === true"
+            [ngStyle]="{ color: 'var(--primary-color)' }">
+            <mat-icon>open_in_new</mat-icon>
           </button>
         </td>
+
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns" class="table-header"></tr>
