--- a/src/app/authentication/register/pup-register/pup-register.component.html
+++ b/src/app/authentication/register/pup-register/pup-register.component.html
@@ -201,6 +201,26 @@
             </mat-error>
           </mat-form-field>
 
+          <div class="operating-hours">
+            <label>Operating Hours</label>
+            <div class="operating-time-row">
+              <mat-form-field appearance="fill">
+                <mat-label>Start Time</mat-label>
+                <input matInput type="time" formControlName="startTime" />
+                <mat-error *ngIf="registerForm.get('startTime')?.hasError('required')">
+                  Start time is required
+                </mat-error>
+              </mat-form-field>
+
+              <mat-form-field appearance="fill">
+                <mat-label>End Time</mat-label>
+                <input matInput type="time" formControlName="endTime" />
+                <mat-error *ngIf="registerForm.get('endTime')?.hasError('required')">
+                  End time is required
+                </mat-error>
+              </mat-form-field>
+            </div>
+          </div>
 
 
 
