--- a/src/app/authentication/register/pup-register/pup-register.component.html
+++ b/src/app/authentication/register/pup-register/pup-register.component.html
@@ -16,6 +16,9 @@
             <mat-error *ngIf="registerForm.get('fullName')?.hasError('required')">
               Full Name is required
             </mat-error>
+            <mat-error *ngIf="registerForm.get('fullName')?.hasError('fullNameInvalid')">
+              Must enter name and surname
+            </mat-error>
           </mat-form-field>
 
           <mat-form-field appearance="fill">
