--- a/src/app/authentication/register/organizer-register/organizer-register.component.html
+++ b/src/app/authentication/register/organizer-register/organizer-register.component.html
@@ -10,7 +10,12 @@
         <mat-form-field appearance="fill">
           <mat-label>Full Name</mat-label>
           <input matInput placeholder="Full Name" formControlName="fullName" />
-          <mat-error *ngIf="registerForm.get('fullName')?.hasError('required')">Full Name is required</mat-error>
+          <mat-error *ngIf="registerForm.get('fullName')?.hasError('required')">
+            Full Name is required
+          </mat-error>
+          <mat-error *ngIf="registerForm.get('fullName')?.hasError('fullNameInvalid')">
+            Must enter name and surname
+          </mat-error>
         </mat-form-field>
 
         <mat-form-field appearance="fill">
