--- a/src/app/event/event-single-page/event-single-page.component.css
+++ b/src/app/event/event-single-page/event-single-page.component.css
@@ -164,3 +164,30 @@
   margin: 15% 0;
   line-height: 1.2;
 }
+
+
+.info-banner {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  width: 100%;
+  background-color: var(--light-blue);
+  padding: 2vh 0;
+  text-align: center;
+}
+
+.info-banner > div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5em; /* space between icon and text */
+}
+
+.info-banner mat-icon {
+  font-size: 1.5vw;
+  color: var(--primary-color);
+}
+
+.info-banner h3 {
+  font-size: 1.5vw;
+  margin: 0;
+}
