[ADD] - Add condition for who can view the graphs

--- a/src/app/event-stats-dialog/event-stats-dialog.component.html
+++ b/src/app/event-stats-dialog/event-stats-dialog.component.html
@@ -14,7 +14,7 @@
   </div>
 
   <!-- Bar Chart -->
-  <div class="chart-block">
+  <div class="chart-block" *ngIf="!(stats.numAcceptedInvitations == 0 && stats.numDeclinesInvitations == 0 && stats.numPendingInvitations == 0)">
     <h3>Attendance</h3>
     <canvas #barChart></canvas>
   </div>
