--- a/src/app/event/event-single-page/event-single-page.component.html
+++ b/src/app/event/event-single-page/event-single-page.component.html
@@ -9,7 +9,7 @@
       </div>
 
       <button mat-stroked-button id="statsBtn"
-              *ngIf="eventDetails.anyEventOrganizerLoggedIn || eventDetails.adminLoggedIn"
+              *ngIf="eventDetails.graphAuthorized"
               (click)="openStatsDialog()">
         <mat-icon>bar_chart</mat-icon>
         View Stats
