--- a/src/app/profile/edit-service-provider-photos/edit-service-provider-photos.component.html
+++ b/src/app/profile/edit-service-provider-photos/edit-service-provider-photos.component.html
@@ -16,7 +16,7 @@
 
   <input type="file" id="companyPictures" (change)="onServiceImageSelected($event)" style="display: none;" accept="image/*" multiple />
   <button mat-raised-button class="primary-button" type="button" (click)="triggerFileInput()">
-    UPLOAD SERVICE PICTURES
+    UPLOAD COMPANY PICTURES
   </button>
 
   <button mat-raised-button (click)="update()" class="primary-button">SAVE</button>
