[FIX] - Fix form verification

--- a/src/app/view-my-events/create-event/create-event.component.html
+++ b/src/app/view-my-events/create-event/create-event.component.html
@@ -182,7 +182,7 @@
               </mat-error>
             </mat-form-field>
 
-            <button mat-raised-button color="primary" type="submit">
+            <button mat-raised-button color="primary" type="submit" id="add_activity_btn">
               Add Activity
             </button>
           </div>
