--- a/src/app/notification/notification/notification.component.html
+++ b/src/app/notification/notification/notification.component.html
@@ -1,6 +1,6 @@
 
 <div class="container" *ngIf="!selectedNotification" >
-    <mat-slide-toggle labelPosition="before" (change)="toggleMute()">MUTE</mat-slide-toggle>
+    <mat-slide-toggle labelPosition="before"  [checked]="mute" (change)="toggleMute()">MUTE</mat-slide-toggle>
 
     <div class="notifications" >
         <div class="single-notification" *ngFor="let notification of notifications" (click)="notificationClick(notification)" >
