[ADD] - maps for events

--- a/src/app/event/event-single-page/event-single-page.component.html
+++ b/src/app/event/event-single-page/event-single-page.component.html
@@ -67,7 +67,7 @@
 
   <!-- Map Section -->
   <div class="map-container" *ngIf="!notFound && loaded">
-    <p height="300px" width="100%"></p>
+    <div id="map" style="height: 300px; width: 100%; border-radius: 12px;"></div>
   </div>
 
   <div class="loading-message" *ngIf="!loaded">
