--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import './colors.css';
+@import "leaflet/dist/leaflet.css";
+
 
 html, body { height: 100%; background-color: var(--light-beige);}
 body { margin: 0;}
