[ADD] - maps for companies

--- a/src/app/service-provider-page/service-provider-page.component.css
+++ b/src/app/service-provider-page/service-provider-page.component.css
@@ -153,3 +153,17 @@
   margin: 15% 0;
   line-height: 1.2;
 }
+
+.map-container {
+  width: 100%;
+  max-width: 90vw;
+  margin: 5vh auto;
+}
+
+
+#map {
+  height: 300px;
+  width: 100%;
+  border-radius: 12px;
+}
+
