--- a/src/app/service-provider-page/service-provider-page.component.html
+++ b/src/app/service-provider-page/service-provider-page.component.html
@@ -57,7 +57,14 @@
         </p-carousel>
       </div>
     </div>
+
   </div>
+
+  <!-- Map Section -->
+  <div class="map-container" *ngIf="provider">
+    <div #mapContainer style="height: 300px; width: 100%; border-radius: 12px;"></div>
+  </div>
+
 
   <div class="reviews">
     <div class="review" *ngFor="let comment of provider.comments" [id]="comment.id">
